--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_egg_morpher.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_egg_morpher.yml
@@ -4,6 +4,9 @@
   name: Egg Morpher
   description: A disgusting biomass generator that reeks of rotting flesh. Capable of producing parasites on its own.
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideHiveStructures
   - type: Sprite
     sprite: _RMC14/Structures/Xenos/hive_structures.rsi
     layers:
