--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -6,9 +6,10 @@
   - RMCXenoSpeechSounds
   - RMCXenoCommendationReceiver
   - RMCXenoMobCollision
-  id: CMXenoRavager
+  id: RMCXenoRavagerBase
   name: Ravager
   description: A huge, nasty red alien with enormous scythed claws.
+  abstract: true
   components:
   - type: GhostRole
     name: cm-job-name-xeno-ravager
@@ -114,15 +115,16 @@
     prefix: ravager
   - type: RMCFireArmorDebuffModifier
     debuffModifier: 1.2
-  - type: PlasmaFrenzy
   - type: RMCImmuneToFireTileDamage
-  - type: TacticalMapIcon
-    icon:
-      sprite: _RMC14/Interface/map_blips.rsi
-      state: ravager
   - type: IntelRecoverCorpseObjectiveOnDeath
     value: 0.7
   - type: TantrumSpeedBuff
+  - type: XenoCruelty
+
+- type: entity
+  parent: RMCXenoRavagerBase
+  id: CMXenoRavager
+  components:
   - type: XenoShield
   - type: XenoLeap
     delay: 0
@@ -132,7 +134,6 @@
     plasmaCost: 25
     leapSound: /Audio/_RMC14/Xeno/alien_pounce.ogg
     destroyObjects: true
-  - type: XenoCruelty
   - type: XenoEmpower
     damageIncreasePer:
       groups:
@@ -147,3 +148,53 @@
     damage:
       types:
         Slash: 40
+  - type: PlasmaFrenzy
+  - type: XenoEvolution
+    strains:
+    - RMCXenoRavagerBerserker
+
+- type: entity
+  parent: RMCXenoRavagerBase
+  id: RMCXenoRavagerBerserker
+  suffix: Berserker
+  components:
+  - type: Sprite
+    sprite: _RMC14/Mobs/Xenonids/Ravager/berserker_ravager.rsi
+  - type: Xeno
+    role: CMXenoRavager
+    actionIds:
+    - ActionXenoRest
+    - ActionXenoRegurgitate
+    - ActionXenoWatch
+    - ActionXenoTailStab
+    - ActionXenoApprehend
+    # - ActionXenoClothesline
+    # - ActionXenoEviscerate
+    - ActionXenoDevolve
+    hidden: true
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      590: Critical
+      730: Dead
+  - type: CMArmor
+    xenoArmor: 30
+    explosionArmor: 80
+  - type: MovementSpeedModifier
+    baseWalkSpeed: 2.5
+    baseSprintSpeed: 4.6
+  - type: XenoShield
+  - type: XenoStrain
+    name: rmc-xeno-berserker-name
+    description: rmc-xeno-berserker-description
+    popup: rmc-xeno-berserker-popup
+  - type: XenoPlasma
+    plasma: 0
+    maxPlasma: 0
+    plasmaRegenOnWeeds: 0
+  - type: XenoCripplingStrike
+    activateText: rmc-xeno-apprehend-activate
+    expireText: rmc-xeno-apprehend-expire
+    auraColor: "#522020"
+    damageMult: 1
+    speed: 1.35
