--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -168,7 +168,7 @@
     - ActionXenoWatch
     - ActionXenoTailStab
     - ActionXenoApprehend
-    # - ActionXenoClothesline
+    - ActionXenoClothesline
     - ActionXenoEviscerate
     - ActionXenoDevolve
     hidden: true
@@ -213,3 +213,13 @@
         Brute: 70
     rangeAtRageLevels: [1.5, 1.5, 1.5, 2.5, 2.5]
     windupReductionAtRageLevels: [0, 0.2, 4, 6, 10]
+  - type: XenoFling # TODO RMC14 target head
+    range: 1.5
+    enragedRange: 1
+    healAmount: 75
+    enragedHealAmount: 100
+    paralyzeTime: 0
+    throwSpeed: 12
+    damage:
+      groups:
+        Brute: 20
