--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
@@ -1,14 +1,10 @@
 - type: job
   parent: CMJobBase
-  id: RMCCMBResponder
+  id: CMCMBResponder
   name: rmc-job-name-cmb-responder
   description: rmc-job-description-cmb-responder
-  playTimeTracker: RMCJobCMBResponder
+  playTimeTracker: CMJobCMBResponder
   ranks:
-    RMCRankCMBMarshal:
-    - !type:RoleTimeRequirement
-      role: RMCJobCMBResponder
-      time: 90000 # 25 hours
     RMCRankCMBDeputy: []
   startingGear: RMCGearCMBResponder
   icon: "CMJobIconEmpty"
@@ -37,31 +33,6 @@
   hasIcon: false
   hidden: true
 
-- type: entity
-  id: RMCRandomHumanoidCMBResponder
-  name: CMB responder ghost role
-  suffix: Spawner, Player, Fax Responder
-  components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Machines/fax_machine.rsi
-    state: icon
-  - type: RandomHumanoidSpawner
-    settings: RMCCMBResponder
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
-  id: RMCCMBResponder
-  components:
-  - type: GhostRole
-    name: rmc-job-name-cmb-responder
-    description: rmc-ghost-role-information-responder-description
-    rules: rmc-ghost-role-information-responder-rules
-    reregister: false
-    job: RMCCMBResponder
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
-
 - type: startingGear
   id: RMCGearCMBResponder
   equipment:
@@ -89,9 +60,9 @@
     - idcard
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
-    job: RMCCMBResponder
+    job: CMCMBResponder
 
 - type: playTimeTracker
-  id: RMCJobCMBResponder
+  id: CMJobCMBResponder
 
 
