--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
@@ -1,9 +1,9 @@
 - type: job
   parent: CMJobBase
-  id: RMCFreePressResponder
+  id: CMFreePressResponder
   name: rmc-job-name-free-press-responder
   description: rmc-job-description-free-press-responder
-  playTimeTracker: RMCJobFreePressResponder
+  playTimeTracker: CMJobFreePressResponder
   ranks:
     RMCRankCivilian: []
   startingGear: RMCGearFreePressResponder
@@ -33,31 +33,6 @@
   hasIcon: false
   hidden: true
 
-- type: entity
-  id: RMCRandomHumanoidFreePressResponder
-  name: Free Press responder ghost role
-  suffix: Spawner, Player, Fax Responder
-  components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Machines/fax_machine.rsi
-    state: icon
-  - type: RandomHumanoidSpawner
-    settings: RMCFreePressResponder
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
-  id: RMCFreePressResponder
-  components:
-  - type: GhostRole
-    name: rmc-job-name-free-press-responder
-    description: rmc-ghost-role-information-responder-description
-    rules: rmc-ghost-role-information-responder-rules
-    reregister: false
-    job: RMCFreePressResponder
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
-
 - type: startingGear
   id: RMCGearFreePressResponder
   equipment:
@@ -86,7 +61,7 @@
     - idcard
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
-    job: RMCFreePressResponder
+    job: CMFreePressResponder
 
 - type: playTimeTracker
-  id: RMCJobFreePressResponder
+  id: CMJobFreePressResponder
