--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/provost_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/provost_responder.yml
@@ -1,11 +1,11 @@
 - type: job
   parent: CMJobBase
-  id: RMCProvostResponder
+  id: CMProvostResponder
   name: rmc-job-name-provost-responder
   description: rmc-job-description-provost-responder
-  playTimeTracker: RMCJobProvostResponder
+  playTimeTracker: CMJobProvostResponder
   ranks:
-    RMCRankFirstLT: []
+    RMCRankProvostCommunicationsOfficer: []
   startingGear: RMCGearProvostResponder
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
@@ -31,31 +31,6 @@
         RMCSkillVehicles: 2
   hasIcon: false
   hidden: true
-
-- type: entity
-  id: RMCRandomHumanoidProvostResponder
-  name: Provost responder ghost role
-  suffix: Spawner, Player, Neutral, Fax Responder
-  components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Machines/fax_machine.rsi
-    state: icon
-  - type: RandomHumanoidSpawner
-    settings: RMCProvostResponder
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
-  id: RMCProvostResponder
-  components:
-  - type: GhostRole
-    name: rmc-job-name-provost-responder
-    description: rmc-ghost-role-information-responder-description
-    rules: rmc-ghost-role-information-responder-rules
-    reregister: false
-    job: RMCProvostResponder
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
 
 - type: startingGear
   id: RMCGearProvostResponder
@@ -87,8 +62,8 @@
     - idcard
     sprite: _RMC14/Objects/CMIDs/provost.rsi
   - type: PresetIdCard
-    job: RMCProvostResponder
+    job: CMProvostResponder
 
 - type: playTimeTracker
-  id: RMCJobProvostResponder
+  id: CMJobProvostResponder
 
