--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/spp_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/spp_responder.yml
@@ -1,18 +1,10 @@
 - type: job
   parent: CMJobBase
-  id: RMCSPPResponder
+  id: CMSPPResponder
   name: rmc-job-name-spp-responder
   description: rmc-job-description-spp-responder
-  playTimeTracker: RMCJobSPPResponder
+  playTimeTracker: CMJobSPPResponder
   ranks:
-    RMCRankSPPMayjor:
-    - !type:RoleTimeRequirement
-      role: RMCJobSPPResponder
-      time: 252000 # 70 hours
-    RMCRankSPPKapitan:
-    - !type:RoleTimeRequirement
-      role: RMCJobSPPResponder
-      time: 36000 # 10 hours
     RMCRankSPPStarshiyLeytenant: []
   startingGear: RMCGearSPPResponder
   icon: "CMJobIconEmpty"
@@ -39,31 +31,6 @@
         RMCSkillVehicles: 2
   hasIcon: false
   hidden: true
-
-- type: entity
-  id: RMCRandomHumanoidSPPResponder
-  name: SPP responder ghost role
-  suffix: Spawner, Player, Fax Responder
-  components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Machines/fax_machine.rsi
-    state: icon
-  - type: RandomHumanoidSpawner
-    settings: RMCSPPResponder
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
-  id: RMCSPPResponder
-  components:
-  - type: GhostRole
-    name: rmc-job-name-spp-responder
-    description: rmc-ghost-role-information-responder-description
-    rules: rmc-ghost-role-information-responder-rules
-    reregister: false
-    job: RMCSPPResponder
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
 
 - type: startingGear
   id: RMCGearSPPResponder
@@ -92,9 +59,9 @@
     - idcard
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
-    job: RMCSPPResponder
+    job: CMSPPResponder
 
 - type: playTimeTracker
-  id: RMCJobSPPResponder
+  id: CMJobSPPResponder
 
 
