--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/tse_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/tse_responder.yml
@@ -1,18 +1,10 @@
 - type: job
   parent: CMJobBase
-  id: RMCTSEResponder
+  id: CMTSEResponder
   name: rmc-job-name-tse-responder
   description: rmc-job-description-tse-responder
-  playTimeTracker: RMCJobTSEResponder
+  playTimeTracker: CMJobTSEResponder
   ranks:
-    RMCRankTSEMajor:
-    - !type:RoleTimeRequirement
-      role: RMCJobTSEResponder
-      time: 252000 # 70 hours
-    RMCRankTSECaptain:
-    - !type:RoleTimeRequirement
-      role: RMCJobTSEResponder
-      time: 36000 # 10 hours
     RMCRankTSELieutenant: []
   startingGear: RMCGearTSEResponder
   icon: "CMJobIconEmpty"
@@ -39,31 +31,6 @@
         RMCSkillVehicles: 2
   hasIcon: false
   hidden: true
-
-- type: entity
-  id: RMCRandomHumanoidTSEResponder
-  name: TSE responder ghost role
-  suffix: Spawner, Player, Fax Responder
-  components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Machines/fax_machine.rsi
-    state: icon
-  - type: RandomHumanoidSpawner
-    settings: RMCTSEResponder
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
-  id: RMCTSEResponder
-  components:
-  - type: GhostRole
-    name: rmc-job-name-tse-responder
-    description: rmc-ghost-role-information-responder-description
-    rules: rmc-ghost-role-information-responder-rules
-    reregister: false
-    job: RMCTSEResponder
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
 
 - type: startingGear
   id: RMCGearTSEResponder
@@ -92,8 +59,8 @@
     - idcard
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
-    job: RMCTSEResponder
+    job: CMTSEResponder
 
 - type: playTimeTracker
-  id: RMCJobTSEResponder
+  id: CMJobTSEResponder
 
