--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/we-ya_responder.yml
@@ -1,18 +1,10 @@
 - type: job
   parent: CMJobBase
-  id: RMCWeYaResponder
+  id: CMWeYaresponder
   name: rmc-job-name-weya-responder
   description: rmc-job-description-weya-responder
-  playTimeTracker: RMCJobWeYaResponder
+  playTimeTracker: CMJobWeYaResponder
   ranks:
-    RMCRankWeYaAssistantManager:
-    - !type:RoleTimeRequirement
-      role: RMCJobWeYaResponder
-      time: 252000 # 70 hours
-    RMCRankWeYaExecutiveSupervisor:
-    - !type:RoleTimeRequirement
-      role: RMCJobWeYaResponder
-      time: 36000 # 10 hours
     RMCRankWeYaExecutiveSpecialist: []
   startingGear: RMCGearWeYaResponder
   icon: "CMJobIconEmpty"
@@ -41,31 +33,6 @@
   hasIcon: false
   hidden: true
 
-- type: entity
-  id: RMCRandomHumanoidWeYaResponder
-  name: WeYa responder ghost role
-  suffix: Spawner, Player, Fax Responder
-  components:
-  - type: Sprite
-    sprite: _RMC14/Structures/Machines/fax_machine.rsi
-    state: icon
-  - type: RandomHumanoidSpawner
-    settings: RMCWeYaResponder
-
-- type: randomHumanoidSettings
-  parent: RMCEventHumanoid
-  id: RMCWeYaResponder
-  components:
-  - type: GhostRole
-    name: rmc-job-name-weya-responder
-    description: rmc-ghost-role-information-responder-description
-    rules: rmc-ghost-role-information-responder-rules
-    reregister: false
-    job: RMCWeYaResponder
-    raffle:
-      settings: short
-  - type: GhostRoleApplySpecial
-
 - type: startingGear
   id: RMCGearWeYaResponder
   equipment:
@@ -93,7 +60,7 @@
     - idcard
     sprite: _RMC14/Objects/CMIDs/gold_id.rsi
   - type: PresetIdCard
-    job: RMCWeYaResponder
+    job: CMWeYaresponder
 
 - type: playTimeTracker
-  id: RMCJobWeYaResponder
+  id: CMJobWeYaResponder
