--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Shoes/misc.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Shoes/misc.yml
@@ -56,3 +56,15 @@
   id: RMCShoesPrisoner
   name: prisoner shoes
   description: A pair of orange shoes worn by prisoners as directed by marine law.
+
+# Galoshes
+- type: entity
+  parent: RMCShoesLaceup
+  id: RMCShoesWeYaStompers
+  name: Weston-Yamada stompers
+  description: A pair of sneakers designed to elicit a morale boosting response within anyone that witnesses them.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Shoes/Misc/stompers.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Shoes/Misc/stompers.rsi
