--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Hands/color.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Hands/color.yml
@@ -62,3 +62,14 @@
     sprite: _RMC14/Objects/Clothing/Hands/Gloves/white.rsi
   - type: Clothing
     sprite: _RMC14/Objects/Clothing/Hands/Gloves/white.rsi
+
+- type: entity
+  parent: CMHandsWhite
+  id: RMCHandsPurple
+  name: purple gloves
+  description: A pair of gloves, they don't look special in any way.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/purple.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Hands/Gloves/purple.rsi
