--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/other.yml
@@ -206,3 +206,14 @@
         color: "#C12D30"
         sprite: Clothing/Uniforms/Jumpsuit/color.rsi
       - state: overlay-inhand-right
+
+- type: entity
+  parent: [RMCMarineUniformBase, RMCAlternateFoldableUniformBase]
+  id: RMCJumpsuitCivilianJanitor
+  name: janitor's jumpsuit
+  description: It's the official uniform of the colony's janitor.
+  components:
+  - type: Sprite
+    sprite: Clothing/Uniforms/Jumpsuit/security.rsi
+  - type: Clothing
+    sprite: Clothing/Uniforms/Jumpsuit/security.rsi
