light armour, belt changes

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_deputy.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/TSE/TSEPA/tsepa_deputy.yml
@@ -40,7 +40,7 @@
     head: RMCHeadBeretTSEPA
     ears: RMCHeadsetTSEPA
     jumpsuit: RMCJumpsuitTSEPA
-    outerClothing: CMArmorM4PMCCorporateLead
+    outerClothing: RMCArmourM4TSEPA
     gloves: RMCHandsVeteran
     shoes: CMBootsBlackFilled
 #    suitstorage: RMCWeaponRifleType71
