Fix crate misprediction

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -216,7 +216,7 @@
     - multiplier: 0.645
       whitelist:
         components:
-        - ResistLocker #Lockers/Crates
+        - RequisitionsCrate #Lockers/Crates
   - type: MobThresholds
     thresholds:
       0: Alive
