modify buckshot boxes to say Large in their name

--- a/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
@@ -373,8 +373,8 @@
 # Shotgun
 - type: construction
   parent: RMC
-  name: Shell Box (Buckshot)
-  id: RMCBoxShellsBuckshotEmpty
+  name: Large Shell Box (Buckshot)
+  id: RMCBoxShellsBuckshotLargeEmpty
   graph: RMCBoxMagazine
   startNode: start
   targetNode: RMCBoxShellsBuckshotEmpty
